--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -18,6 +18,7 @@
       & ul {
         & li{
           display: inline-block;
+          margin-top: 10px;
           &:not(:nth-child(3)){
             margin-right: 20px;
           }
