--- a/scss/_itemsdetails.scss
+++ b/scss/_itemsdetails.scss
@@ -1,5 +1,21 @@
 #sell_item{
-  background: #ece9e9;
+  background: #ffcffa2b;
+  .row{
+    margin-bottom: 30px;
+  }
+  .details_txt{
+    h2 {
+      margin-bottom: 20px;
+    }
+    h6{
+      margin-top: 5px;
+    }
+    .product_price{
+      font-weight: 700;
+      margin-bottom: 15px;
+      display: inline-block;
+    }
+  }
   #back_to_main{
     position: fixed;
     width: 15%;
@@ -17,8 +33,17 @@
       opacity: 1;
     }
   }
+  #back_to_cart{
+    width: 15%;
+    box-shadow: 0px 6px 26px 0 #30252554;
+    right: 0;
+    border: none;
+    opacity: .4;
+    background: #ff94bc;
+    padding: 10px;
+    color: #fff;
+    border-radius: 15px;
+  }
   img{
-    height: 500px;
-    width: 100%;
   }
 }
